--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "radix-vue": "^0.4.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "vue-sonner": "^1.0.0",
     "vue3-carousel": "^0.3.1"
   }
 }
