--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.7.4",
     "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
